feat: add wallet balance endpoint and live balance display
- Add GET /api/billing/balance endpoint to backend
- Add getWalletBalance() API call in frontend
- Display wallet balance in Nav bar
- Handle wallet_updated SSE events to update balance in real-time
- Handle billing_required events with user-friendly error message

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ backend/billing.db
 .idea/
 .DS_Store
 *.log
+
+# Local tools (binaries + auth config — downloaded via scripts/setup-stripe.sh)
+.tools/
